deploy-homebridge/manifest/homebridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homebridge
  name: homebridge
  namespace: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homebridge
      name: homebridge
    spec:
      terminationGracePeriodSeconds: 30
      #hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homebridge
        image: oznu/homebridge:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 18581
          name: homebridge-port
        - containerPort: 53055
          name: homebridge-srv
        - containerPort: 58891
          name: shelly
        - containerPort: 52587
          name: bridge-prt
        - containerPort: 51828
          name: webhooks-prt
        resources: {}
        volumeMounts:
        - name: homebridge
          mountPath: /homebridge
          subPath: _homebridge
          readOnly: false
        - name: homebridge-new
          mountPath: /homebridge-new
      volumes:
      - name: homebridge
        persistentVolumeClaim:
          claimName: homebridge-data-pvc
      - name: homebridge-new
        persistentVolumeClaim:
          claimName: homebridge-pvc
