deploy-homebridge/manifest/homebridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-service
  namespace: homebridge
  annotations:
    metallb.universe.tf/allow-shared-ip: "domotica"
spec:
  selector:
    app: homebridge
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.0.246
  ports:
  - port: 80
    targetPort: homebridge-port
    name: homebridge-gui
  # - port: 58891
  #   targetPort: shelly
  #   name: shelly
