deploy-homebridge/manifest/homebridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge-ingress
  namespace: homebridge
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip

spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge-service
                port:
                  number: 40080
